adding oozie coordinator

--- a/oozie_logfile_processing/wf/job.properties
+++ b/oozie_logfile_processing/wf/job.properties
@@ -1,4 +1,4 @@
-oozie.wf.application.path=
+oozie.wf.application.path=/user/cloudera/oozie/logfile-process/wf/workflow.xml
 jobtracker=quickstart:8021
 namenode=hdfs://quickstart:8022
 inputPath=/user/cloudera/output/logs/nasa
