--- a/flume_agents/clienta.properties
+++ b/flume_agents/clienta.properties
@@ -7,9 +7,12 @@ julyLog.sinks= snk1
 julyLog.sources.src1.type=spooldir
 julyLog.sources.src1.channels=chnl1
 julyLog.sources.src1.spoolDir=/home/cloudera/sample-data/nasa_log/july
+julyLog.sources.src1.inputCharset=us-ascii
 
 #channels
 julyLog.channels.chnl1.type=memory
+julyLog.channels.chnl1.capacity=10000
+julyLog.channels.chnl1.transactionCapacity=1000
 
 #sink
 julyLog.sinks.snk1.type = avro
