--- a/flume_agents/server_agent.properties
+++ b/flume_agents/server_agent.properties
@@ -26,11 +26,11 @@ server.channels.chnl1.dataDirs=/home/cloudera/sample-data/nasa_log/file-channel/
 #sinks
 server.sinks.snk1.type=hdfs
 server.sinks.snk1.channel=chnl1
-server.sinks.snk1.hdfs.path=/user/okmich20/output/logs/nasa
+server.sinks.snk1.hdfs.path=/user/cloudera/output/logs/nasa
 server.sinks.snk1.hdfs.batchSize=1500
-server.sinks.snk1.hdfs.rollSize=0
-server.sinks.snk1.hdfs.rollInterval=60
-server.sinks.snk1.hdfs.rollCount=100000
+server.sinks.snk1.hdfs.rollSize=134217728
+server.sinks.snk1.hdfs.rollInterval=180
+server.sinks.snk1.hdfs.rollCount=0
 server.sinks.snk1.hdfs.filePrefix=nasa_
 server.sinks.snk1.hdfs.fileSuffix=.log
 server.sinks.snk1.hdfs.fileType=DataStream
