--- a/oozie_logfile_processing/job.properties
+++ b/oozie_logfile_processing/job.properties
@@ -1,5 +1,5 @@
-oozie.wf.application.path=
-jobtracker=quickstart:8021
-namenode=hdfs://quickstart:8022
-app.inputPath=/user/cloudera/output/logs/nasa
-app.outputPath=/user/cloudera/output/logs/nasa_output
+oozie.coord.application.path=/user/cloudera/oozie/logfile-process/coordinator.xml
+jobTracker=quickstart.cloudera:8021
+namenode=hdfs://quickstart.cloudera:8022
+wfInputPath=/user/cloudera/output/logs/nasa
+wfOutputPath=/user/cloudera/output/logs/nasa_output
