--- a/realtime/flume-server/server-agent.properties
+++ b/realtime/flume-server/server-agent.properties
@@ -19,13 +19,12 @@ server.channels.chnl1.dataDirs=/home/cloudera/file-channel/logfiles/dataDir
 #configure the kafka channel
 #server.channels.kfk1.type=org.apache.flume.channel.kafka.KafkaChannel
 
-
 #sinks
-server.sinks.snk1.type=logger
+#server.sinks.snk1.type=logger
+#server.sinks.snk1.type = org.apache.spark.streaming.flume.sink.SparkSink
+server.sinks.snk1.type = avro
 server.sinks.snk1.channel= chnl1
-#server.sinks.snk1.type= avro
-#server.sinks.snk1.hostname= localhost
-#server.sinks.snk1.port= 4422
-
+server.sinks.snk1.hostname = quickstart.cloudera
+server.sinks.snk1.port = 4422
 
 # flume-ng agent --name server --conf-file ./server-agent.properties -Dflume.root.logger=INFO,console
