--- a/realtime/logging-app/lib/log4j.properties
+++ b/realtime/logging-app/lib/log4j.properties
@@ -2,7 +2,7 @@
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
 
-log4j.rootLogger=DEBUG, Console, file, Flume
+log4j.rootLogger=DEBUG, Console, Flume
 
 log4j.appender.Console =org.apache.log4j.ConsoleAppender
 log4j.appender.Console.layout=org.apache.log4j.PatternLayout
