--- a/realtime/kafka/flume-agents/flume-kafka-channel.properties
+++ b/realtime/kafka/flume-agents/flume-kafka-channel.properties
@@ -2,10 +2,13 @@ server.sources=src1
 server.channels=kfk1
 
 #sources
-server.sources.src1.type=avro
+#server.sources.src1.type=avro
+#server.sources.src1.channels=kfk1
+#server.sources.src1.bind =0.0.0.0
+#server.sources.src1.port =4141
+server.sources.src1.type=spooldir
 server.sources.src1.channels=kfk1
-server.sources.src1.bind =0.0.0.0
-server.sources.src1.port =4141
+server.sources.src1.spoolDir=/home/cloudera/classes/hadoop-training-projects/flume/simple_dir_spool/dir
 
 #channels
 #configure the kafka channel 
