first class hackerday

--- a/realtime/kafka/flume-agents/flume-kafka-channel.properties
+++ b/realtime/kafka/flume-agents/flume-kafka-channel.properties
@@ -1,14 +1,12 @@
 server.sources=src1
-server.channels=kfk1
+server.channels=kfk1 mem1
+server.sinks=hdfs1
 
 #sources
-#server.sources.src1.type=avro
-#server.sources.src1.channels=kfk1
-#server.sources.src1.bind =0.0.0.0
-#server.sources.src1.port =4141
-server.sources.src1.type=spooldir
-server.sources.src1.channels=kfk1
-server.sources.src1.spoolDir=/home/cloudera/classes/hadoop-training-projects/flume/simple_dir_spool/dir
+server.sources.src1.type=avro
+server.sources.src1.channels=kfk1 mem1
+server.sources.src1.bind =0.0.0.0
+server.sources.src1.port =4141
 
 #channels
 #configure the kafka channel 
@@ -18,9 +16,20 @@ server.channels.kfk1.kafka.bootstrap.servers= quickstart.cloudera:9092
 server.channels.kfk1.kafka.topic=flume-kafka-channel
 server.channels.kfk1.parseAsFlumeEvent=false
 
+
+server.channels.mem1.type=memory
+
 #sinks
 #with a kafka channel, we can do without a flume sink - one of flume's rare exception
 
+server.sinks.hdfs1.type=hdfs
+server.sinks.hdfs1.channel=mem1
+server.sinks.hdfs1.hdfs.path=/user/cloudera/output/flume/hdfssink
+server.sinks.hdfs1.hdfs.rollSize=0
+server.sinks.hdfs1.hdfs.rollCount=10000
+server.sinks.hdfs1.hdfs.rollInterval=0
+server.sinks.hdfs1.hdfs.fileType=DataStream
+server.sinks.hdfs1.hdfs.writeFormat=Text
 
 # create the kafka topic with the command
 # kafka-topics.sh --create --zookeeper quickstart.cloudera:2181 --replication-factor 1 --partitions 1 --topic flume-kafka-channel
