--- a/realtime/kafka/flume-agents/flume-kafka-sink.properties
+++ b/realtime/kafka/flume-agents/flume-kafka-sink.properties
@@ -1,10 +1,10 @@
 server.sources=src1
-server.channels=chnl1
-server.sinks=snk1
+server.channels=chnl1 mem1
+server.sinks=snk1 hdfs1
 
 #sources
 server.sources.src1.type=avro
-server.sources.src1.channels=chnl1
+server.sources.src1.channels=chnl1 mem1
 server.sources.src1.bind =0.0.0.0
 server.sources.src1.port =4141
 
@@ -13,6 +13,7 @@ server.channels.chnl1.type=file
 server.channels.chnl1.checkpointDir=/home/cloudera/file-channel/logfiles/checkpointDir
 server.channels.chnl1.dataDirs=/home/cloudera/file-channel/logfiles/dataDir
 
+server.channels.mem1.type=memory
 
 #sink
 # see - http://flume.apache.org/FlumeUserGuide.html#kafka-sink
@@ -21,6 +22,17 @@ server.sinks.snk1.channel= chnl1
 server.sinks.snk1.kafka.bootstrap.servers= quickstart.cloudera:9092
 server.sinks.snk1.kafka.topic = flume-kafka-sink
 server.sinks.snk1.flumeBatchSize=10
+
+
+server.sinks.hdfs1.type=hdfs
+server.sinks.hdfs1.channel=mem1
+server.sinks.hdfs1.hdfs.path=/user/cloudera/output/flume/hdfssink
+server.sinks.hdfs1.hdfs.rollSize=0
+server.sinks.hdfs1.hdfs.rollCount=10000
+server.sinks.hdfs1.hdfs.rollInterval=0
+server.sinks.hdfs1.hdfs.fileType=DataStream
+server.sinks.hdfs1.hdfs.writeFormat=Text
+
 
 
 # create the kafka topic with the command
