--- a/realtime/kafka/logging-app/pom.xml
+++ b/realtime/kafka/logging-app/pom.xml
@@ -18,11 +18,17 @@
             <artifactId>log4j</artifactId>
             <version>1.2.17</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.flume.flume-ng-clients/flume-ng-log4jappender -->
+        <dependency>
+            <groupId>org.apache.flume.flume-ng-clients</groupId>
+            <artifactId>flume-ng-log4jappender</artifactId>
+            <version>1.7.0</version>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/org.apache.kafka/kafka-log4j-appender -->
         <dependency>
             <groupId>org.apache.kafka</groupId>
             <artifactId>kafka-log4j-appender</artifactId>
-            <version>0.10.2.1</version>
+            <version>0.11.0.0</version>
         </dependency>
     </dependencies>
     
