after kafka log streaming

--- a/realtime/kafka/kafka-connect/file-connect.properties
+++ b/realtime/kafka/kafka-connect/file-connect.properties
@@ -1,8 +1,8 @@
 name=logfile-connector
 connector.class=org.apache.kafka.connect.file.FileStreamSinkConnector
 tasks.max=1
-file=test.sink.txt
-topics=flume-kafka-channel
+file=/home/cloudera/Downloads/sink.log
+topics=log-in-gateway
 key.converter.schemas.enable=false
 value.converter.schemas.enable=false
 
