--- a/realtime/kafka/logging-app/lib/log4j.properties
+++ b/realtime/kafka/logging-app/lib/log4j.properties
@@ -2,7 +2,7 @@
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
 
-log4j.rootLogger=INFO, Console, Flume
+log4j.rootLogger=INFO, Console, kafka
 
 log4j.appender.Console =org.apache.log4j.ConsoleAppender
 log4j.appender.Console.layout=org.apache.log4j.PatternLayout
@@ -15,15 +15,15 @@ log4j.appender.Console.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{
 #log4j.appender.file.layout=org.apache.log4j.PatternLayout
 #log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
 
-log4j.appender.Flume = org.apache.flume.clients.log4jappender.Log4jAppender
-log4j.appender.Flume.Hostname=localhost
-log4j.appender.Flume.Port = 4141
-log4j.appender.Flume.UnsafeMode = false
+#log4j.appender.Flume = org.apache.flume.clients.log4jappender.Log4jAppender
+#log4j.appender.Flume.Hostname=localhost
+#log4j.appender.Flume.Port = 4141
+#log4j.appender.Flume.UnsafeMode = false
 
 
-#log4j.appender.kafka = org.apache.kafka.log4jappender.KafkaLog4jAppender
-#log4j.appender.kafka.brokerList=quickstart.cloudera:9092
-#log4j.appender.kafka.topic=test
-#log4j.appender.kafka.layout=org.apache.log4j.PatternLayout
-#log4j.appender.kafka.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
-#log4j.appender.kafka.level=INFO
+log4j.appender.kafka = org.apache.kafka.log4jappender.KafkaLog4jAppender
+log4j.appender.kafka.brokerList=quickstart.cloudera:9092
+log4j.appender.kafka.topic=log-in-gateway
+log4j.appender.kafka.layout=org.apache.log4j.PatternLayout
+log4j.appender.kafka.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
+log4j.appender.kafka.level=INFO
